logs/validate.20260408-062201.log
Mode: isolate
Isolate: including Chap47 Chap18 Chap02
error: unexpected token, expected `;`
   --> src/Chap47/QuadProbFlatHashTableStEph.rs:796:21
    |
796 |                     implies !spec_flat_has_key(
    |                     ^^^^^^^

error[E0425]: cannot find type `QuadProbFlatHashTableStEph` in this scope
    --> src/Chap47/QuadProbFlatHashTableStEph.rs:1288:30
     |
1288 |     impl std::fmt::Debug for QuadProbFlatHashTableStEph {
     |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `QuadProbFlatHashTableStEph` in this scope
    --> src/Chap47/QuadProbFlatHashTableStEph.rs:1294:32
     |
1294 |     impl std::fmt::Display for QuadProbFlatHashTableStEph {
     |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0425`.
Elapsed: 2s
Sampled Memory Usage: peak rust_verify RSS: 3506MB, peak z3 RSS: 381MB, min free: 23070MB
Sampled CPU Usage: rust_verify: 42s, z3 children: 15s
